# solar-smart-energy-env

./: .gitignore  Dockerfile  README.md  app.py  database.py  env.py  fix_structure.py  inference.py  llm.py  openenv.yaml  pyproject.toml  requirements.txt  rl_agent.py  test_env.py  train_rl.py  unpin_sidebar.ps1  weather.py
graders/: grader.py
server/: __init__.py  app.py
solar_smart_env/: Dockerfile  README.md  app.py  database.py  env.py  gradio_app.py  inference.py  models.py  openenv.yaml  requirements.txt  rl_agent.py  solar_simulation.db  weather.py
tmp/: test_api.py  test_fix.py  test_internal_sync.py
